@@ -11,7 +11,6 @@ import java.util.Set;
 import java.util.regex.Pattern;
 
 import javax.annotation.PostConstruct;
-import javax.servlet.ServletContext;
 import javax.ws.rs.core.HttpHeaders;
 import javax.ws.rs.core.MultivaluedMap;
 import javax.ws.rs.core.UriBuilder;
@@ -468,18 +467,8 @@ public class SearchService extends BasicService{
         return graphDBhandler.getResponse("distCollo", "q", query);
     }
     
-    public void closeIndexReader (String token, ServletContext context)
-            throws KustvaktException {
-
-        if (token != null && !token.isEmpty()
-                && token.equals(context.getInitParameter("adminToken"))) {
-            searchKrill.closeIndexReader();
-//            vcLoader.recachePredefinedVC();
-        }
-        else {
-            throw new KustvaktException(StatusCodes.INCORRECT_ADMIN_TOKEN,
-                    "Admin token is incorrect");
-        }
+    public void closeIndexReader () throws KustvaktException {
+        searchKrill.closeIndexReader();
     }
 
     /**
