@@ -9,6 +9,9 @@
  - Updated admin filter by using admin token and role checks.
 2022-03-18
  - Added an OAuth2 admin API to delete expired/revoked access and refresh tokens.
+2022-03-28
+ - Updated admin filter (admintoken as a form param) and uses 
+   it for the closing index reader API. 
 
 # version 0.65.1
 
